# tk2017-analyse

./: cities.csv  coalitie.py  data.py  index.html  matrix.json  matrix.py  pca.py  pyproject.toml
casus/: 1  10  11  12  13  14  15  16  17  18  19  2  20  21  22  23  24  25  26  27  28  29  3  30  4  5  6  7  8  9  parse.py
